--- a/src/App.css
+++ b/src/App.css
@@ -27,13 +27,15 @@
 }
 .card-box {
   width: 50%;
-  height: 30%;
+  min-height: 30%;
   background: white;
   border-radius: 10px;
   padding: 20px;
 }
 .input-flex{
   display: flex;
-  gap:10px
+  gap:10px;
+  justify-content: center;
+  align-items: center;
 }
 
